--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
                                 <h1 class="fw-bolder mb-3">Harapan Akan Sebuah Cahaya.</h1>
-                                <p class="lead fw-normal text-muted mb-4">Di sudut Desa Gebangsari RT 04/01, Kecamatan Tambak, Banyumas, berdirilah Mushola Al-Atsari. Lebih dari sekadar tempat untuk menunaikan sholat berjamaah, mushola ini diharapkan menjadi tempat tersebarnya ilmu dan lahirya ukhuwah islamiyah, sebuah markiz dakwah Ahlussunnah wal Jamaah.</p>
+                                <p class="lead fw-normal text-muted mb-4">Di sudut Desa Gebangsari RT 04/01, Kecamatan Tambak, Banyumas, berdirilah Mushola Al-Atsari. Lebih dari sekadar tempat untuk menunaikan sholat berjamaah, mushola ini diharapkan menjadi tempat tersebarnya ilmu dan lahirnya ukhuwah islamiyah, sebuah markiz dakwah Ahlussunnah wal Jamaah.</p>
                             </div>
                         </div>
                     </div>
