--- a/archive-kajian.html
+++ b/archive-kajian.html
@@ -58,8 +58,8 @@
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-3 mb-3" src="./assets/images/kajian-ahkamul-janaiz-tambak.jpg" alt="kajian-ahkamul-janaiz-tambak" />
                                 <p class="f4 fw-bolder text-decoration-none">Kajian Ahkamul Janaiz</p>
-                                <p><i class="bi bi-cast"></i> Streaming: <a target="_blank" href="#">Klik di sini</a></p>
-                                <p><i class="bi bi-download"></i> Download: <a target="_blank" href="#">Satuan</a> | <a target="_blank" href="#">Batch</a> | <a target="_blank" href="#">Kitab</a></p>
+                                <p><i class="bi bi-cast"></i> Streaming: <a target="_blank" href="https://archive.org/details/ahkamul-janaiz-ust-abul-hayyaj-affan">Klik di sini</a></p>
+                                <p><i class="bi bi-download"></i> Download: <a target="_blank" href="https://archive.org/download/ahkamul-janaiz-ust-abul-hayyaj-affan">Satuan</a> | <a target="_blank" href="https://archive.org/compress/ahkamul-janaiz-ust-abul-hayyaj-affan/formats=VBR%20MP3,ITEM%20TILE,ARCHIVE%20BITTORRENT,METADATA,TEXT%20PDF,IMAGE%20CONTAINER%20PDF">Batch</a> | <a target="_blank" href="https://archive.org/download/ahkamul-janaiz-ust-abul-hayyaj-affan/ahkamul-janaiz-wa-bidauha-albani.pdf">Kitab</a></p>
                             </div>
                         </div>
                         <div class="col-lg-6">
